CiliumNetworkPolicies/backend-allow-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-mongo
  namespace: ginflix
spec:
  podSelector:
    matchLabels:
      app: backend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: database
    ports:
    - port: 27017
  policyTypes: [Egress]
