CiliumNetworkPolicies/frontend-egress-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-egress-internet
  namespace: ginflix
spec:
  podSelector:
    matchLabels:
      app: frontend
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 443
  policyTypes: [Egress]
