CiliumNetworkPolicies/streamer-egress-s3.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: streamer-egress-s3
  namespace: ginflix
spec:
  podSelector:
    matchLabels:
      app: streamer
  egress:
  - to:
    - ipBlock:
        cidr: 137.194.0.0/16
    ports:
    - port: 443
  policyTypes: [Egress]
